5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1771_1580.log
== TEST (2019-05-24 17:14:48) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(eval(input()))

print(vetN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:14:53) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(eval(input()))

print(vetN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:15:13) 
-- CODE:
from numpy import *

vetP = array(str(input()))
vetN = array(eval(input()))

print(vetN)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:35:46) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(str(input()))

f = 0
a = 0
r = 0

while(cont):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:40:46) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(str(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < size(vetp)):
	if (vetP == -1):
		f += 1
	elif (vetP < 6):
		r += 1
	else:
		a+=1
	cont+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:43:03) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(str(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < size(vetp)):
	if (vetP == -1):
		f += 1
	elif (vetP[cont] < 6):
		r += 1
	else:
		a+=1
	cont+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:43:21) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(str(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < size(vetp)):
	if (vetP == -1):
		f += 1
	elif (vetP[cont] < 6):
		r += 1
	else:
		a+=1
	cont+=1
print(f,a,r,cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:44:40) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(str(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < size(vetP)):
	if (vetP == -1):
		f += 1
	elif (vetP[cont] < 6):
		r += 1
	else:
		a+=1
	cont+=1
print(f,a,r,cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:45:25) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(eval(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < size(vetP)):
	if (vetP == -1):
		f += 1
	elif (vetP[cont] < 6):
		r += 1
	else:
		a+=1
	cont+=1
print(f,a,r,cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:47:25) 
-- CODE:
from numpy import *

vetP = array(eval(input()))
vetN = array(eval(input()))

f = 0
a = 0
r = 0

cont = 0
while(cont < len(vetP)-1):
	if (vetP == -1):
		f += 1
	elif (vetP[cont] < 6):
		r += 1
	else:
		a+=1
	cont+=1
print(f,a,r,cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
